fix text not showing on safari

--- a/src/main/resources/static/css/Dashboard.css
+++ b/src/main/resources/static/css/Dashboard.css
@@ -236,6 +236,7 @@
     font-weight: bold;
     background-color: var(--bg-white);
     transition: 0.2s;
+    font-size:1rem;
 }
 
 .quick-add-btn:hover {
